--- a/html/bdy.html
+++ b/html/bdy.html
@@ -31,9 +31,9 @@
   <div class="box">
     <!-- 顶部菜单 -->
     <div class="top">
-      <div style="width: 100%;height: 35px;"></div>
-      <nav class="navbar navbar-expand bg-dark navbar-dark fixed-top"
-        style="height: 35px;overflow: hidden;border-bottom: 2px solid black;">
+      <div style="width: 100%;height: 40px;"></div>
+      <nav class="navbar navbar-expand navbar-dark fixed-top"
+        style="height: 45px;overflow: hidden;border-bottom: 2px solid #01215a;background-color: #01215a;">
         <ul class="navbar-nav">
           <li class="nav-item" id="top_retreat">
             <a class="nav-link" href="#">
@@ -85,7 +85,7 @@
         </ul>
 
         <span class="navbar-text" style="margin: 10px;">
-          <input type="text" style="height: 18px;width: 400px;overflow: hidden;" id="path_k">
+          <input type="text" style="height: 27px;width: 400px;overflow: hidden;opacity: 0.5;border-radius: 7px;" id="path_k">
         </span>
 
       </nav>
@@ -93,48 +93,53 @@
     <!-- 左侧菜单 -->
     <div class="content">
       <div class="left">
-        <nav class="navbar bg-dark navbar-dark fixed-top " style="width: 180px;top: 35px; ">
-          <ul class="navbar-nav" style="margin-left: 20px;" id="tab_left">
-            <li class="nav-item">
-              <a class="nav-link" href="./up_.html" id="up_file">
-                <svg class="bi bi-card-text" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    d="M14.5 3h-13a.5.5 0 00-.5.5v9a.5.5 0 00.5.5h13a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5zm-13-1A1.5 1.5 0 000 3.5v9A1.5 1.5 0 001.5 14h13a1.5 1.5 0 001.5-1.5v-9A1.5 1.5 0 0014.5 2h-13z"
-                    clip-rule="evenodd" />
-                  <path fill-rule="evenodd"
-                    d="M3 5.5a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5zM3 8a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9A.5.5 0 013 8zm0 2.5a.5.5 0 01.5-.5h6a.5.5 0 010 1h-6a.5.5 0 01-.5-.5z"
-                    clip-rule="evenodd" />
-                </svg>
-                上传文件</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./up_.html" id="up_dir">
-                <svg class="bi bi-columns-gap" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    d="M6 1H1v3h5V1zM1 0a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1H1zm14 12h-5v3h5v-3zm-5-1a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1v-3a1 1 0 00-1-1h-5zM6 8H1v7h5V8zM1 7a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V8a1 1 0 00-1-1H1zm14-6h-5v7h5V1zm-5-1a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1h-5z"
-                    clip-rule="evenodd" />
-                </svg>
-                上传文件夹</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <svg class="bi bi-collection-play-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    d="M1.5 14.5A1.5 1.5 0 010 13V6a1.5 1.5 0 011.5-1.5h13A1.5 1.5 0 0116 6v7a1.5 1.5 0 01-1.5 1.5h-13zm5.265-7.924A.5.5 0 006 7v5a.5.5 0 00.765.424l4-2.5a.5.5 0 000-.848l-4-2.5zM2 3a.5.5 0 00.5.5h11a.5.5 0 000-1h-11A.5.5 0 002 3zm2-2a.5.5 0 00.5.5h7a.5.5 0 000-1h-7A.5.5 0 004 1z"
-                    clip-rule="evenodd" />
-                </svg>
-                根目录</a>
-            </li>
-
+        <nav class="navbar-dark fixed-top " style="width: 180px;top: 45px;">
+          <ul class="navbar-nav" id="tab_left">
+            <div>
+              <li class="nav-item">
+                <a class="nav-link" href="./up_.html" id="up_file">
+                  <svg class="bi bi-card-text" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M14.5 3h-13a.5.5 0 00-.5.5v9a.5.5 0 00.5.5h13a.5.5 0 00.5-.5v-9a.5.5 0 00-.5-.5zm-13-1A1.5 1.5 0 000 3.5v9A1.5 1.5 0 001.5 14h13a1.5 1.5 0 001.5-1.5v-9A1.5 1.5 0 0014.5 2h-13z"
+                      clip-rule="evenodd" />
+                    <path fill-rule="evenodd"
+                      d="M3 5.5a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9a.5.5 0 01-.5-.5zM3 8a.5.5 0 01.5-.5h9a.5.5 0 010 1h-9A.5.5 0 013 8zm0 2.5a.5.5 0 01.5-.5h6a.5.5 0 010 1h-6a.5.5 0 01-.5-.5z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  上传文件</a>
+              </li>
+            </div>
+            <div>
+              <li class="nav-item">
+                <a class="nav-link" href="./up_.html" id="up_dir">
+                  <svg class="bi bi-columns-gap" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M6 1H1v3h5V1zM1 0a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1H1zm14 12h-5v3h5v-3zm-5-1a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1v-3a1 1 0 00-1-1h-5zM6 8H1v7h5V8zM1 7a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V8a1 1 0 00-1-1H1zm14-6h-5v7h5V1zm-5-1a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1h-5z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  上传文件夹</a>
+              </li>
+            </div>
+            <div>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <svg class="bi bi-collection-play-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M1.5 14.5A1.5 1.5 0 010 13V6a1.5 1.5 0 011.5-1.5h13A1.5 1.5 0 0116 6v7a1.5 1.5 0 01-1.5 1.5h-13zm5.265-7.924A.5.5 0 006 7v5a.5.5 0 00.765.424l4-2.5a.5.5 0 000-.848l-4-2.5zM2 3a.5.5 0 00.5.5h11a.5.5 0 000-1h-11A.5.5 0 002 3zm2-2a.5.5 0 00.5.5h7a.5.5 0 000-1h-7A.5.5 0 004 1z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  根目录</a>
+              </li>
+            </div>
 
           </ul>
         </nav>
       </div>
       <!-- 变化区域 -->
-      <div class="right" style="position: relative;" id="main0">
+      <div class="right" style="position: relative;overflow: hidden;" id="main0">
         
       </div>
       <!-- 菜单模块 -->
@@ -190,5 +195,5 @@
 <script src="../module/bdy_/bdy_module.js"></script>
 <script src="../module/bdy_/bdy.js"></script>
 <script src="../module/bdy_/tab.js"></script>
-
-<script src="../module/main/backup_.js"></script>
+<!-- 
+<script src="../module/main/backup_.js"></script> -->
