--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,6 @@
       margin: 0;
       padding: 0;
     }
-
     html,
     body {
       width: 100%;
@@ -32,9 +31,9 @@
   <div class="box">
     <!-- 顶部菜单 -->
     <div class="top">
-      <div style="width: 100%;height: 35px;"></div>
-      <nav class="navbar navbar-expand bg-dark navbar-dark fixed-top"
-        style="height: 35px;overflow: hidden;border-bottom: 2px solid black;">
+      <div style="width: 100%;height: 40px;"></div>
+      <nav class="navbar navbar-expand navbar-dark fixed-top"
+        style="height: 45px;overflow: hidden;border-bottom: 2px solid #01215a;background-color: #01215a;">
         <ul class="navbar-nav">
           <li class="nav-item" id="top_retreat">
             <a class="nav-link" href="#">
@@ -84,7 +83,7 @@
         </ul>
 
         <span class="navbar-text" style="margin: 10px;">
-          <input type="text" style="height: 18px;width: 400px;" id="path_k">
+          <input type="text" style="height: 27px;width: 400px;opacity: 0.5;border-radius: 7px;" id="path_k">
         </span>
 
       </nav>
@@ -92,48 +91,51 @@
     <!-- 左侧菜单 -->
     <div class="content">
       <div class="left">
-        <nav class="navbar bg-dark navbar-dark fixed-top " style="width: 180px;top: 35px; ">
-          <ul class="navbar-nav" style="margin-left: 20px;">
-
-
-            <li class="nav-item" id="left_word">
-              <a class="nav-link" href="#">
-                <svg class="bi bi-file-earmark-text" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M4 1h5v1H4a1 1 0 00-1 1v10a1 1 0 001 1h8a1 1 0 001-1V6h1v7a2 2 0 01-2 2H4a2 2 0 01-2-2V3a2 2 0 012-2z" />
-                  <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 019 4.5z" />
-                  <path fill-rule="evenodd"
-                    d="M5 11.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm0-2a.5.5 0 01.5-.5h5a.5.5 0 010 1h-5a.5.5 0 01-.5-.5zm0-2a.5.5 0 01.5-.5h5a.5.5 0 010 1h-5a.5.5 0 01-.5-.5z"
-                    clip-rule="evenodd" />
-                </svg>
-                文档</a>
-            </li>
-            <li class="nav-item" id="left_dow">
-              <a class="nav-link" href="#">
-                <svg class="bi bi-cloud-download" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M4.887 5.2l-.964-.165A2.5 2.5 0 103.5 10H6v1H3.5a3.5 3.5 0 11.59-6.95 5.002 5.002 0 119.804 1.98A2.501 2.501 0 0113.5 11H10v-1h3.5a1.5 1.5 0 00.237-2.981L12.7 6.854l.216-1.028a4 4 0 10-7.843-1.587l-.185.96z" />
-                  <path fill-rule="evenodd"
-                    d="M5 12.5a.5.5 0 01.707 0L8 14.793l2.293-2.293a.5.5 0 11.707.707l-2.646 2.646a.5.5 0 01-.708 0L5 13.207a.5.5 0 010-.707z"
-                    clip-rule="evenodd" />
-                  <path fill-rule="evenodd" d="M8 6a.5.5 0 01.5.5v8a.5.5 0 01-1 0v-8A.5.5 0 018 6z"
-                    clip-rule="evenodd" />
-                </svg>
-                下载</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="./time.html">
-                <svg class="bi bi-columns-gap" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    d="M6 1H1v3h5V1zM1 0a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1H1zm14 12h-5v3h5v-3zm-5-1a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1v-3a1 1 0 00-1-1h-5zM6 8H1v7h5V8zM1 7a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V8a1 1 0 00-1-1H1zm14-6h-5v7h5V1zm-5-1a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1h-5z"
-                    clip-rule="evenodd" />
-                </svg>
-                定时备份</a>
-            </li>
+        <nav class="navbar-dark fixed-top" style="width: 180px;top:45px;">
+          <ul class="navbar-nav">
+            <div>
+              <li class="nav-item" id="left_word">
+                <a class="nav-link" href="#">
+                  <svg class="bi bi-file-earmark-text" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M4 1h5v1H4a1 1 0 00-1 1v10a1 1 0 001 1h8a1 1 0 001-1V6h1v7a2 2 0 01-2 2H4a2 2 0 01-2-2V3a2 2 0 012-2z" />
+                    <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 019 4.5z" />
+                    <path fill-rule="evenodd"
+                      d="M5 11.5a.5.5 0 01.5-.5h2a.5.5 0 010 1h-2a.5.5 0 01-.5-.5zm0-2a.5.5 0 01.5-.5h5a.5.5 0 010 1h-5a.5.5 0 01-.5-.5zm0-2a.5.5 0 01.5-.5h5a.5.5 0 010 1h-5a.5.5 0 01-.5-.5z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  文档</a>
+              </li>
+            </div>
+            <div>
+              <li class="nav-item" id="left_dow">
+                <a class="nav-link" href="#">
+                  <svg class="bi bi-cloud-download" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M4.887 5.2l-.964-.165A2.5 2.5 0 103.5 10H6v1H3.5a3.5 3.5 0 11.59-6.95 5.002 5.002 0 119.804 1.98A2.501 2.501 0 0113.5 11H10v-1h3.5a1.5 1.5 0 00.237-2.981L12.7 6.854l.216-1.028a4 4 0 10-7.843-1.587l-.185.96z" />
+                    <path fill-rule="evenodd"
+                      d="M5 12.5a.5.5 0 01.707 0L8 14.793l2.293-2.293a.5.5 0 11.707.707l-2.646 2.646a.5.5 0 01-.708 0L5 13.207a.5.5 0 010-.707z"
+                      clip-rule="evenodd" />
+                    <path fill-rule="evenodd" d="M8 6a.5.5 0 01.5.5v8a.5.5 0 01-1 0v-8A.5.5 0 018 6z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  下载</a>
+              </li>
+            </div>
+            <div>
+              <li class="nav-item">
+                <a class="nav-link" href="./time.html">
+                  <svg class="bi bi-columns-gap" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M6 1H1v3h5V1zM1 0a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1H1zm14 12h-5v3h5v-3zm-5-1a1 1 0 00-1 1v3a1 1 0 001 1h5a1 1 0 001-1v-3a1 1 0 00-1-1h-5zM6 8H1v7h5V8zM1 7a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V8a1 1 0 00-1-1H1zm14-6h-5v7h5V1zm-5-1a1 1 0 00-1 1v7a1 1 0 001 1h5a1 1 0 001-1V1a1 1 0 00-1-1h-5z"
+                      clip-rule="evenodd" />
+                  </svg>
+                  定时备份</a>
+              </li>
+            </div>
           </ul>
         </nav>
       </div>
@@ -148,7 +150,6 @@
           <img src="../img/yp.jpg" width="70" height="70">
           <p style="margin-left: 10px;">计算机</p>
         </div>
-
 
         <button style="margin-top: 10px;width: 100%;text-align: left;border: 0;background-color: white;height: 30px;position: relative;">
           &nbsp;&nbsp;<strong style="position: relative; top: -2px;"><img src="../img/down.png" style="width: 15px;height: 10px;"></strong>&nbsp;&nbsp;FTP客户端
@@ -175,7 +176,7 @@
         </div>
 
         <button style="margin-top: 10px;width: 100%;text-align: left;border: 0;background-color: white;height: 30px;position: relative;">
-          &nbsp;&nbsp;<strong><img src="../img/down.png" style="width: 15px;height: 10px;"></strong>&nbsp;&nbsp;webdav
+          &nbsp;&nbsp;<strong><img src="../img/down.png" style="width: 15px;height: 10px;"></strong>&nbsp;&nbsp;坚果云
           <div style="position: absolute; top: 15px;left: 105px;border: 0.5px solid rgb(206, 197, 197);width:100%;height:0"></div>
         </button>
         <div id="webdav" style="display: block;" class="div_block mar">
